# 3D-pose-estimation

./: .gitignore  Dockerfile  Dockerfile.cuda  README.md  conf.ig.example  pyproject.toml
.github/workflows/: ci.yaml
examples/config/: camera.yaml  dataset.yaml  mpi_3dhp.yaml
src/pose3d/: convert_annot_to_npz.py  dataset_runner.py  keypoints.py  visualize.py
